Traducciones añadidas a strings.xml

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Entrega1</string>
     <string name="VerCatalogoPeliculas">Ver catálogo de películas</string>
@@ -61,8 +62,8 @@
     <string name="ListaCreada">Lista creada correctamente.</string>
     <string name="NoCreadoLista">No se ha creado una nueva lista.</string>
     <string name="EliminarPeliculaLista">Eliminar película de la lista</string>
-    <string name="SeguroQuitarLista">¿Estas seguro de que quieres eliminar la película de la lista?</string>
-    <string name="PeliculaEliminadaLista">Pelicula eliminada de la lista correctamente.</string>
+    <string name="SeguroQuitarLista">¿Estás seguro de que eliminar la película de la lista?</string>
+    <string name="PeliculaEliminadaLista">Película eliminada de la lista correctamente.</string>
     <string name="Si">Sí</string>
     <string name="No">No</string>
     <string name="NoEliminadoPeliculaLista">No se ha eliminado la película de la lista.</string>
