Añadido control del cambio de orientación y mantenimiento de la información.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -106,4 +106,5 @@
     <string name="SeleccionaIdioma">Select language:</string>
     <string name="QueIdioma">Which language do you want to select?</string>
     <string name="Favoritos">Favorites</string>
+    <string name="SeleccionarLista">Select list:</string>
 </resources>
