--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -106,4 +106,5 @@
     <string name="SeleccionaIdioma">Hizkuntza aukeratu:</string>
     <string name="QueIdioma">Zein hizkuntz aukeratu nahi duzu?</string>
     <string name="Favoritos">Gogokoenak</string>
+    <string name="SeleccionarLista">Zerrenda aukeratu:</string>
 </resources>
