--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="SeleccionaIdioma">Selecciona el idioma:</string>
     <string name="QueIdioma">¿Qué idioma quieres seleccionar?</string>
     <string name="Favoritos">Favoritos</string>
+    <string name="SeleccionarLista">Seleccionar lista:</string>
 </resources>
