Fragments añadidos para las actividades de catálogo e información de la película.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="Puntuacion">Puntuación:</string>
     <string name="Generos">Géneros:</string>
     <string name="Duracion">Duración:</string>
-    <string name="FechaLanzamiento">Fecha de lanzamiento:</string>
+    <string name="FechaLanzamiento">Fecha lanzamiento:</string>
     <string name="IdiomaOriginal">Idioma original:</string>
     <string name="IdiomasDisponibles">Idiomas disponibles:</string>
     <string name="Presupuesto">Presupuesto:</string>
