Comentarios y explicaciones añadidas a las clases.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,5 @@
     <string name="ComentariosNot">Comentarios</string>
     <string name="ComentarioGuardadoNot">Has guardado un fichero con comentarios.</string>
     <string name="AbrirFichero">Abrir fichero</string>
+    <string name="Hola">Hola</string>
 </resources>
