--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -111,4 +111,5 @@
     <string name="ComentariosNot">Comments</string>
     <string name="ComentarioGuardadoNot">You saved a file with comments.</string>
     <string name="AbrirFichero">Open file</string>
+    <string name="Hola">Hi</string>
 </resources>
