--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -111,4 +111,5 @@
     <string name="ComentariosNot">Komentarioak</string>
     <string name="ComentarioGuardadoNot">Fitxategi bat komentarioekin gorde duzu.</string>
     <string name="AbrirFichero">Fitxategia ireki</string>
+    <string name="Hola">Kaixo</string>
 </resources>
